--- a/dsp-splash-page/src/pages/Contact/contact.css
+++ b/dsp-splash-page/src/pages/Contact/contact.css
@@ -4,7 +4,7 @@
 
 #contact {
     width: 100%;
-    min-height: 1400px;
+    min-height: 1600px;
     padding-top: 0;
     padding-left: 0;
 }
