--- a/dsp-splash-page/src/pages/Digital/digital.css
+++ b/dsp-splash-page/src/pages/Digital/digital.css
@@ -22,6 +22,7 @@
 
 .column {
     width: 28%;
+    float: left;
 }
 
 .BIMHead {
