--- a/dsp-splash-page/src/pages/JoinUs/joinus.css
+++ b/dsp-splash-page/src/pages/JoinUs/joinus.css
@@ -1,6 +1,6 @@
 #joinUs {
     width: 100%;
-    min-height: 2700px;
+    min-height: 2750px;
     padding-top: 0;
     padding-left: 0;
 }
